--- a/VSC Extension/src/config/website.html
+++ b/VSC Extension/src/config/website.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel='icon' href='https://raw.githubusercontent.com/DervexHero/Argon/main/VSC%20Extension/assets/Logo.png'>
-    <meta charset="UTF-8">
+    <meta charset='UTF-8'>
     <title>Argon</title>
 
     <style media='screen'>
