--- a/VSC Extension/src/config/website.html
+++ b/VSC Extension/src/config/website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono&display=swap'>
     <link rel='icon' href='https://raw.githubusercontent.com/DervexHero/Argon/main/VSC%20Extension/assets/Logo.png'>
     <meta charset='UTF-8'>
     <title>Argon</title>
